syntax = "proto3";

package org.project_planton.credential.v1;

import "google/protobuf/timestamp.proto";
import "org/project_planton/provider/atlas/provider.proto";
import "org/project_planton/provider/aws/provider.proto";
import "org/project_planton/provider/azure/provider.proto";
import "org/project_planton/provider/civo/provider.proto";
import "org/project_planton/provider/cloudflare/provider.proto";
import "org/project_planton/provider/confluent/provider.proto";
import "org/project_planton/provider/digitalocean/provider.proto";
import "org/project_planton/provider/gcp/provider.proto";
import "org/project_planton/provider/kubernetes/provider.proto";
import "org/project_planton/provider/snowflake/provider.proto";

// Generic credential message.
message Credential {
  // Unique identifier.
  string id = 1;
  // Name of the credential.
  string name = 2;

  // CredentialProvider enum for supported cloud providers.
  enum CredentialProvider {
    CREDENTIAL_PROVIDER_UNSPECIFIED = 0;
    GCP = 1;
    AWS = 2;
    AZURE = 3;
  }

  // Provider type.
  CredentialProvider provider = 3;

  CredentialProviderConfig provider_config = 4;

  // Creation timestamp.
  google.protobuf.Timestamp created_at = 7;
  // Last update timestamp.
  google.protobuf.Timestamp updated_at = 8;
}

message CredentialProviderConfig {
  // Provider-specific credential data.
  oneof data {
    org.project_planton.provider.atlas.AtlasProviderConfig atlas = 1;
    org.project_planton.provider.aws.AwsProviderConfig aws = 2;
    org.project_planton.provider.azure.AzureProviderConfig azure = 3;
    org.project_planton.provider.civo.CivoProviderConfig civo = 4;
    org.project_planton.provider.cloudflare.CloudflareProviderConfig cloudflare = 5;
    org.project_planton.provider.confluent.ConfluentProviderConfig confluent = 6;
    org.project_planton.provider.digitalocean.DigitalOceanProviderConfig digitalocean = 7;
    org.project_planton.provider.gcp.GcpProviderConfig gcp = 8;
    org.project_planton.provider.kubernetes.KubernetesProviderConfig kubernetes = 9;
    org.project_planton.provider.snowflake.SnowflakeProviderConfig snowflake = 10;
  }
}
