syntax = "proto3";

package project.planton.credential.awscredential.v1;

import "buf/validate/validate.proto";
import "project/planton/shared/shared.proto";

// AwsCredentialSpec message represents the specification required to create or connect an AWS Account on the
// Planton Cloud Platform.
// This message consolidates all necessary input parameters to establish a connection with an AWS Account, ensuring
// accurate configuration and validation of credentials.
// Fields include details like AWS account ID, access credentials, and the region, providing a complete set of
// information for securely connecting to AWS.
// Detailed validation rules have been applied to these fields to ensure input correctness and adherence to
// security protocols.
message AwsCredentialSpec {
  // Information about the environment in which the AWS credential is being used.
  // This field is used to provide additional context, such as the associated organization and environment details.
  project.planton.shared.ApiResourceEnvironmentInfo environment_info = 99;

  // The AWS Account ID, which uniquely identifies the AWS account.
  // This is a mandatory field and must be a numeric string.
  // The value cannot be empty and must only contain numbers (0-9).
  string account_id = 1 [
    (buf.validate.field).ignore_empty = true,
    (buf.validate.field).required = true,
    (buf.validate.field).cel = {
      id: "spec.aws.account_id",
      message: "Only numbers (0-9) are allowed",
      expression: "this.matches('^[0-9]+$')"
    }
  ];

  // The AWS Access Key ID, which is used to authenticate API requests to AWS services.
  // This is a required field, and it must always start with 'AKIA' followed by 16 alphanumeric characters.
  // This field must contain exactly 20 characters, and validation rules ensure the correctness of the format.
  string access_key_id = 2 [
    (buf.validate.field).required = true,
    (buf.validate.field).ignore_empty = true,
    (buf.validate.field).string.len = 20,
    (buf.validate.field).cel = {
      id: "spec.aws.access_key_id",
      message: "Must start with 'AKIA'",
      // https://regex101.com/r/QgVmCf/1
      expression: "this.matches('^AKIA.*')"
    },
    (buf.validate.field).cel = {
      id: "spec.aws.access_key_id",
      message: "Must start with 'AKIA' followed by 16 alphanumeric characters'",
      // https://regex101.com/r/LybhZA/1
      expression: "this.matches('^.{4}[a-zA-Z0-9]{16}.*$')"
    }
  ];

  // The AWS Secret Access Key, which is used in combination with the access key ID to authenticate API requests to AWS services.
  // This is a required field, and the value must be exactly 40 characters long.
  // The secret access key can include numbers, lowercase and uppercase letters, slashes (/), and plus signs (+).
  string secret_access_key = 3 [
    (buf.validate.field).ignore_empty = true,
    (buf.validate.field).required = true,
    (buf.validate.field).string.len = 40,
    (buf.validate.field).cel = {
      id: "spec.aws.secret_access_key",
      message: "The provided AWS Secret Access Key is invalid. It must contain exactly 40 characters consisting of numbers, lowercase and uppercase letters, slashes (/), and plus signs (+). Please double-check your input and try again.",
      //https://regex101.com/r/YlvVRM/1
      expression: "this.matches('^[0-9a-zA-Z/+]{40}$')"
    }
  ];

  // The AWS region to be used when configuring this AWS credential.
  // This optional field allows specifying the region in which resources will be created or managed.
  string region = 4;
}
