syntax = "proto3";

package project.planton.credential.gcpcredential.v1;

import "buf/validate/validate.proto";

// GcpCredentialSpec message represents the specification required to connect a Google Cloud Platform (GCP).
// This message consolidates all necessary input parameters to establish a connection with a GCP account,
// ensuring accurate configuration and validation of credentials.
// Fields include details like GCP organization ID and service account key, providing a complete set of information
// for securely connecting to GCP.
// Detailed validation rules have been applied to these fields to ensure input correctness and adherence to
// security protocols.
message GcpCredentialSpec {
  // The Google Service Account Base64 Encoded Key, which is used to authenticate API requests to GCP services.
  // This is a required field, and the value must be a valid base64 encoded string.
  // // For more information do refer this link https://cloud.google.com/iam/docs/keys-create-delete
  string service_account_key_base64 = 1 [
    (buf.validate.field).required = true
  ];
}
