syntax = "proto3";

package backend.v1;

option go_package = "github.com/project-planton/project-planton/app/backend/apis/gen/go/proto;v1";

// ProviderConfig contains credentials for cloud providers.
message ProviderConfig {
  oneof config {
    AwsProviderConfig aws = 1;
    GcpProviderConfig gcp = 2;
    AzureProviderConfig azure = 3;
    AtlasProviderConfig atlas = 4;
    CloudflareProviderConfig cloudflare = 5;
    ConfluentProviderConfig confluent = 6;
    SnowflakeProviderConfig snowflake = 7;
    KubernetesProviderConfig kubernetes = 8;
  }
}

// AwsProviderConfig contains AWS credentials.
message AwsProviderConfig {
  string account_id = 1;
  string access_key_id = 2;
  string secret_access_key = 3;
  optional string region = 4;
  optional string session_token = 5;
}

// GcpProviderConfig contains GCP credentials.
message GcpProviderConfig {
  string service_account_key_base64 = 1;
}

// AzureProviderConfig contains Azure credentials.
message AzureProviderConfig {
  string client_id = 1;
  string client_secret = 2;
  string tenant_id = 3;
  string subscription_id = 4;
}

// AtlasProviderConfig contains MongoDB Atlas credentials.
message AtlasProviderConfig {
  string public_key = 1;
  string private_key = 2;
}

// CloudflareProviderConfig contains Cloudflare credentials.
message CloudflareProviderConfig {
  int32 auth_scheme = 1; // 1 = api_token, 2 = legacy_api_key
  optional string api_token = 2;
  optional string api_key = 3;
  optional string email = 4;
}

// ConfluentProviderConfig contains Confluent Cloud credentials.
message ConfluentProviderConfig {
  string api_key = 1;
  string api_secret = 2;
}

// SnowflakeProviderConfig contains Snowflake credentials.
message SnowflakeProviderConfig {
  string account = 1;
  string region = 2;
  string username = 3;
  string password = 4;
}

// KubernetesProviderConfig contains Kubernetes cluster credentials.
message KubernetesProviderConfig {
  int32 provider = 1; // 1 = gcp_gke, 2 = aws_eks, 3 = azure_aks, 4 = digital_ocean_doks
  optional KubernetesProviderConfigGcpGke gcp_gke = 2;
  optional KubernetesProviderConfigAwsEks aws_eks = 3;
  optional KubernetesProviderConfigAzureAks azure_aks = 4;
  optional KubernetesProviderConfigDigitalOceanDoks digital_ocean_doks = 5;
}

// KubernetesProviderConfigGcpGke contains GKE cluster credentials.
message KubernetesProviderConfigGcpGke {
  string cluster_endpoint = 1;
  string cluster_ca_data = 2;
  string service_account_key_base64 = 3;
}

// KubernetesProviderConfigAwsEks contains EKS cluster credentials.
message KubernetesProviderConfigAwsEks {
  // Empty for now - EKS uses AWS credentials from parent
}

// KubernetesProviderConfigAzureAks contains AKS cluster credentials.
message KubernetesProviderConfigAzureAks {
  // Empty for now - AKS uses Azure credentials from parent
}

// KubernetesProviderConfigDigitalOceanDoks contains DOKS cluster credentials.
message KubernetesProviderConfigDigitalOceanDoks {
  string kube_config = 1;
}

